# edammcp

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json  install.sh
.github/workflows/: deploy-docs.yml  precommit.yml  pytest.yml
docs/: index.md
docs/contributing/: development-setup.md
docs/developer/: api.md  architecture.md
docs/examples/: basic-usage.md
docs/getting-started/: installation.md
docs/stylesheets/: extra.css
edam_mcp/: __init__.py  config.py  main.py
edam_mcp/models/: __init__.py  requests.py  responses.py
edam_mcp/ontology/: __init__.py  loader.py  matcher.py  suggester.py
edam_mcp/tools/: __init__.py  mapping.py  suggestion.py
edam_mcp/utils/: __init__.py  context.py  similarity.py  text_processing.py
examples/: basic_usage.py  basic_usage_mapper.py  basic_usage_suggester.py  basic_usage_suggestter.py  simple_test.py
scripts/: install_dev.py  setup_dev.py
tests/: __init__.py  test_mapping.py
